loleaflet/css/oxool.css
/* ... */
#main-document-content {
	z-index: 0;
}

nav.text-color-indicator ~ #main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--blue1-txt-primary-color));
}
nav.spreadsheet-color-indicator ~ #main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--green0-txt-primary-color));
}
nav.presentation-color-indicator ~ #main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--orange1-txt-primary-color));
}
nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--yellow0-txt-primary-color));
}

.oxool-annotation-collapsed {
	background: var(--color-background-lighter);
	border-radius: 50%;
	width: 36px;
	height: 36px;
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.annotation-active .oxool-annotation-collapsed {
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup {
	border-radius: 8px !important;
	border: 1px solid var(--color-border) !important;
	background: var(--color-background-lighter) !important;
}

#mobile-wizard-popup {
	background-color: var(--color-background-lighter) !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .lokdialog.ui-dialog-content {
	background-color: transparent !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation {
	margin-bottom: 16px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:last-of-type {
	margin-bottom: 8px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:first-of-type {
	margin-top: 8px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation-content-wrapper {
	box-shadow: none;
	border-width: 0px 0px 1px !important;
	border-bottom: 1px solid var(--color-border) !important;
	border-radius: 0 !important;
	background: var(--color-background-lighter);
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup [id^='comment-container-']:last-child > .oxool-annotation-content-wrapper{
	border-width: 0 !important;
}


.oxool-dont-break {
	/* These are technically the same, but use both */
	overflow-wrap: break-word;
	word-wrap: break-word;

	/* Don't eat new lines  */
	white-space: pre-wrap;

	/* Adds a hyphen where the word breaks, if supported (No Blink) */
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	-webkit-hyphens: auto;
	hyphens: auto;
}

.oxool-annotation-content-author {
	margin: 0;
	margin-top: 2px;
	height: 18px;
}

.oxool-annotation-content-resolved {
	color: green;
}

.oxool-annotation-edit {
	margin: 3px;
	line-height: 1.4;
}

.oxool-annotation-textarea {
	font-family: var(--oxool-font) !important;
	font-size: var(--default-font-size);
	border: 1px solid #c8c8c8;
	background-color: white;
	overflow-x: hidden;
	height: 50px;
	width: 100%;
	box-sizing: border-box;
}

.oxool-div-layer {
	position: absolute;
	left: 0;
	top: 0;
}

.oxool-annotation-table {
	border-spacing: 0;
	border-collapse: separate;
	white-space: nowrap;
	width: 100%;
}

.oxool-annotation-img {
	max-width: 32px;
	display: inline-block;
	border: solid 2px;
	border-radius: 50%;
	height: 32px;
	width: 32px;
	padding: 0;
}
.oxool-annotation-img .avatar-img{
	border: none;
}
.oxool-annotation-img > .avatar-img{
	display: block;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 32px; /* Width of new image */
	height: 32px; /* Height of new image */
	background: url('images/user.svg') center 3px no-repeat;
}

.leaflet-container .leaflet-pane.leaflet-calc-background-pane {
	z-index: 0;
}

.avatar-img {
	border: solid 2px;
	border-radius: 50%;
}

.user-info {
	border-radius: 50%;
	width: 24px;
	height: 24px;
	overflow: auto;
	margin: auto;
}

.oxool-annotation-author {
	padding-left: 10px;
	padding-right: 10px;
	vertical-align: top;
	display: table-cell;
	width: 100%;
	overflow: hidden;
	max-width: 110px;
}

.oxool-annotation-menu, .oxool-annotation-menu-redline, .oxool-redline-accept-button, .oxool-redline-reject-button {
	margin: 0;
	padding: 0;
	width: 24px;
	height: 24px;
	vertical-align: top;
	border: 1px solid transparent;
	display: inline-block;
}

.oxool-redline-accept-button {
	background: url('images/cmd/accepttrackedchanges.svg') no-repeat center !important;
}

.oxool-redline-reject-button {
	background: url('images/cmd/rejecttrackedchange.svg') no-repeat center !important;
}

.oxool-annotation-menu, .oxool-annotation-menu-redline {
	background: url('images/submenu.svg') no-repeat center/contain !important;
}

.oxool-annotation-menu:hover, .oxool-annotation-menu-redline:hover, .oxool-redline-accept-button:hover, .oxool-redline-reject-button:hover {
	border: 1px solid darkgrey;
}

.oxool-annotation-date {
	font-size: var(--default-font-size);
}

.oxool-annotation-menubar {
	margin: 0;
	padding: 0;
	vertical-align: top;
}
/*Tooltips
----------------------------------*/
[data-title]:hover:after {
	opacity: 1;
	transition: all 0.1s ease 0.5s;
	visibility: visible;
}
.oxool-annotation-collapsed [data-title]:hover:after {
	position: static;
	float: right;
	margin-top: 22px;
	margin-right: 8px;
}
[data-title]:after {
	content: attr(data-title);
	font-size: 1em !important;
	bottom: -1.6em;
	left: 100%;
	white-space: nowrap;
	opacity: 0;
	border-color: #2a2a2a;
	visibility: hidden;
}
.oxool-ruler-left[data-title]:after,
.oxool-ruler-right[data-title]:after {
	bottom: -2.8em;
	left: auto;
}
[data-title] {
	position: relative;
}

.oxool-annotation-caption {
	font-weight: bold;
}

.oxool-bar {
	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
	border-radius: var(--border-radius);
	display: inline-block;
	margin: 3px;
	vertical-align: middle;
}
/* ... */

